--- a/ramls/_examples/loan_post.sample
+++ b/ramls/_examples/loan_post.sample
@@ -10,9 +10,9 @@
       "patron_id": "Me123",
       "item_barcode": "000000055510000222",
       "item_id": "23344156380001021",
-      "due_date": 1413813699999,
+      "due_date": 1472973966510,
       "loan_status": "ACTIVE",
-      "loan_date": 1403434999999,
+      "loan_date": 1472973966510,
       "loan_fine": 0,
       "title": "History today",
       "author": "me",
@@ -20,6 +20,7 @@
       "publication_year": 2000,
       "call_number": "1234567890",
       "renewable": false,
+      "renew_count": 2,
       "location_code": {
         "value": "1234567890",
         "name": "1234567890"
