add library id to item

--- a/ramls/_examples/item_get.sample
+++ b/ramls/_examples/item_get.sample
@@ -20,5 +20,6 @@
   },
   "copy_id": "1",
   "item_link": "/bibs/99100383909999/item/1234567890009999",
-  "bib_id": "99100383909999"
+  "bib_id": "99100383909999",
+  "library_id" : "88"
 }
