--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 
   <repositories>
     <repository>
-      <id>id-maven-repo</id>
-      <name>Index Data Maven Repository</name>
-      <url>https://folio-nexus.indexdata.com/repository/maven-snapshots</url>
+      <id>folio-nexus</id>
+      <name>FOLIO Maven repository</name>
+      <url>https://repository.folio.org/repository/maven-folio</url>
     </repository>
   </repositories>
 
@@ -234,7 +234,43 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <preparationGoals>clean verify</preparationGoals>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+          <pushChanges>false</pushChanges>
+          <localCheckout>true</localCheckout>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
+
+  <scm>
+    <url>https://github.com/folio-org/mod-circulation</url>
+    <connection>scm:git:git://github.com/folio-org/mod-circulation.git</connection>
+    <developerConnection>scm:git:git@github.com/folio-org/mod-circulation.git</developerConnection>
+  </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>folio-nexus</id>
+      <name>FOLIO Release Repository</name>
+      <url>https://repository.folio.org/repository/maven-releases/</url>
+      <uniqueVersion>false</uniqueVersion>
+      <layout>default</layout>
+    </repository>
+    <snapshotRepository>
+      <id>folio-nexus</id>
+      <name>FOLIO Snapshot Repository</name>
+      <uniqueVersion>true</uniqueVersion>
+      <url>https://repository.folio.org/repository/maven-snapshots/</url>
+      <layout>default</layout>
+    </snapshotRepository>
+  </distributionManagement>
+
 
 </project>
