--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,12 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>domain-models-api-interfaces</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.1-mongo</version>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>domain-models-runtime</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.1-mongo</version>
     </dependency>
   </dependencies>
 
